Fixed broken styles

--- a/css/app.css
+++ b/css/app.css
@@ -182,11 +182,24 @@ th, td {
     padding: 15px;
     text-align: left;
     border-bottom: 1px solid #fff;
+    text-align: center !important;
 }
 
 .rmborder{
     border-bottom: none !important;
 }
+
+tr:hover {background-color: #000}
+
+.tablebox{
+    border: solid;
+    border-color: white;
+    padding: 10px;
+    background-color: #2C3E50 !important;
+}
+
+
+
 
 .headerskills
 {
